--- a/letov/letov-interview-2/index.html
+++ b/letov/letov-interview-2/index.html
@@ -55,8 +55,10 @@
 <p>L: First of all, it is the idea of heroism. The person is not a lowly weak individual, but a warrior of sorts, a Hero with a capital H, a Person with a capital P. The creator, the maker. A person who does not fear taking responsibility for our reality.</p>
 <p>I: Why do you think that fascism and communism are almost gone? Well, not gone, but their powers are no longer as strong as before?</p>
 <p>L: I don’t think it’s gone. Quite the contrary. At first, the idea of democracy carried a certain myth in our country. Democracy as America. Specifically a myth. When it was unrealizable, when it was so far away, it seemed to carry the image of a sweet mirage. When this myth became a reality, it became so monstrous and scary. It birthed so much alienation and impoverishment among the people that now people instinctively go to either fascism, communism. To Barkashov*, to Anpilov**, or to us. It is an instinctive, subconscious wish to resist this trap of chaos and entropy into which our country was thrown.
-*Barkashov is a neo-Nazi who founded the Russian National Unity party. Very likely an informant.
-**Viktor Anpilov was the former head of the Trudovaya Rossiya, which refused to join the KPRF as they saw them as reformists. Played an active role in the 1993 Constitutional Crisis. Passed away in 2018.</p>
+<li>Barkashov is a neo-Nazi who founded the Russian National Unity party. Very likely an informant.
+</ul>
+<li>Viktor Anpilov was the former head of the Trudovaya Rossiya, which refused to join the KPRF as they saw them as reformists. Played an active role in the 1993 Constitutional Crisis. Passed away in 2018.</p>
+</ui>
 <p>I: How does your idea sound [audio cuts off]</p>
 <p>L: In a very unusual way. You’ll see it tonight at the concert. Our music I think is very heroic, powerful, firm, creative, and brave.</p>
 <p>[Question not heard]</p>
