--- a/episodes/2021-03-17-wasp-network-ft-jaime/index.html
+++ b/episodes/2021-03-17-wasp-network-ft-jaime/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+    <meta name="google-site-verification" content="J3pj4z86dEKJNR2MFc3F_HvZg737o34nnm9J0tdq8nM" />
     
     
     <title>Gladio Free Europe | Wasp Network ft. Jaime</title>
