--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+    <meta name="google-site-verification" content="J3pj4z86dEKJNR2MFc3F_HvZg737o34nnm9J0tdq8nM" />
     <link rel="alternate" type="application/rss+xml" href="https://gladiofreeeurope.github.io/index.xml" title="Gladio Free Europe" />
     
     
