--- a/letov/index.html
+++ b/letov/index.html
@@ -26,7 +26,7 @@
 
 <div>
   <h3>
-    <a href="/letov/moterland/">Lyrics for Motherland (1993)</a>
+    <a href="/letov/motherland/">Lyrics for Motherland (1993)</a>
   </h3>
   
     <p>
