cleaned up footnotes

--- a/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/index.html
+++ b/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/index.html
@@ -62,7 +62,7 @@
 <li><a href="https://www.youtube.com/watch?v=IXdUmBJQAKM">Grazhdanskaya Oborona – Government</a></li>
 <li><a href="https://www.youtube.com/watch?v=c0bZVAJvEtk">Grazhdanskaya Oborona – Everything is like what people have</a></li>
 <li><a href="https://www.youtube.com/watch?v=H_BoeI2-E4w">Adolf Gitler – Mein Kampf</a></li>
-<li><a href="https://www.youtube.com/watch?v=ZB6VobpbxDE">Yanka – From a big mind</a></li>
+<li><a href="https://www.youtube.com/watch?v=ZB6VobpbxDE">Yanka – Overabundance of wit</a></li>
 <li><a href="https://www.youtube.com/watch?v=XMtctSjB0Mo">Kommunizm – I see nothing</a></li>
 <li><a href="https://www.youtube.com/watch?v=XG7JRvtsh1U">Grazhdanskaya Oborona – Everything&rsquo;s going according to plan</a></li>
 <li><a href="https://www.youtube.com/watch?v=9Fg-fhuDd6Y">Grazhdanskaya Oborona – My defense</a></li>
