--- a/letov/letov-interview-2/index.html
+++ b/letov/letov-interview-2/index.html
@@ -48,16 +48,11 @@
 <p>I: Why do you think that your music is so popular in Russia?</p>
 <p>L: Because it is founded on genuine Russian ideas and energies. Those people who go to our concerts share not our ideology, but our energy. They need the energy emanating from us. It is a popular energy. In a way we are not the authors of the music, only its medium. We do not belong to ourselves.</p>
 <p>[Break in the footage, question not heard]</p>
-<p>L: What we are doing is the raising a new generation of passionari* as explained by Lev Gumilev. New warriors who will come after us and who will inherit this land. So for example, there are obvious connections between generations. Grandfathers and grandchildren. Fathers and sons fall out. Those generations that should follow the one that we represent as Grazhdanskaya Oborona, they are against us. They are mostly businessmen, the bourgeoisie, the “New Russians”. But the next generation, 10-15 year olds, these are the people who understand and support us. They will take on the task of revolution. We are creating a new ideology. A new religion, like communism in 1917, with which they will win.</p>
-<ul>
-<li>Concept from the thought of Lev Gumilev, a controversial Russian historian and ethnographer. According to him, the growth of ethnic groups is linked to passionarity, the ability for a group to give itself a cause beyond the personal interest. Passionarity comes in cycles and could wear down over time if it is not renewed by charismatic individuals with a spirit of self-sacrifice. Compare to Ibn Khaldun’s cycle of civilizations and the concept of asabiyya.</li>
-</ul>
+<p>L: What we are doing is the raising a new generation of passionari<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup> as explained by Lev Gumilev. New warriors who will come after us and who will inherit this land. So for example, there are obvious connections between generations. Grandfathers and grandchildren. Fathers and sons fall out. Those generations that should follow the one that we represent as Grazhdanskaya Oborona, they are against us. They are mostly businessmen, the bourgeoisie, the “New Russians”. But the next generation, 10-15 year olds, these are the people who understand and support us. They will take on the task of revolution. We are creating a new ideology. A new religion, like communism in 1917, with which they will win.</p>
 <p>I: Which ideas of fascism do you especially like?</p>
 <p>L: First of all, it is the idea of heroism. The person is not a lowly weak individual, but a warrior of sorts, a Hero with a capital H, a Person with a capital P. The creator, the maker. A person who does not fear taking responsibility for our reality.</p>
 <p>I: Why do you think that fascism and communism are almost gone? Well, not gone, but their powers are no longer as strong as before?</p>
-<p>L: I don’t think it’s gone. Quite the contrary. At first, the idea of democracy carried a certain myth in our country. Democracy as America. Specifically a myth. When it was unrealizable, when it was so far away, it seemed to carry the image of a sweet mirage. When this myth became a reality, it became so monstrous and scary. It birthed so much alienation and impoverishment among the people that now people instinctively go to either fascism, communism. To Barkashov*, to Anpilov**, or to us. It is an instinctive, subconscious wish to resist this trap of chaos and entropy into which our country was thrown.
-*Barkashov is a neo-Nazi who founded the Russian National Unity party. Very likely an informant.
-**Viktor Anpilov was the former head of the Trudovaya Rossiya, which refused to join the KPRF as they saw them as reformists. Played an active role in the 1993 Constitutional Crisis. Passed away in 2018.</p>
+<p>L: I don’t think it’s gone. Quite the contrary. At first, the idea of democracy carried a certain myth in our country. Democracy as America. Specifically a myth. When it was unrealizable, when it was so far away, it seemed to carry the image of a sweet mirage. When this myth became a reality, it became so monstrous and scary. It birthed so much alienation and impoverishment among the people that now people instinctively go to either fascism, communism. To Barkashov<sup id="fnref:2"><a href="#fn:2" class="footnote-ref" role="doc-noteref">2</a></sup>, to Anpilov<sup id="fnref:3"><a href="#fn:3" class="footnote-ref" role="doc-noteref">3</a></sup>, or to us. It is an instinctive, subconscious wish to resist this trap of chaos and entropy into which our country was thrown.</p>
 <p>I: How does your idea sound [audio cuts off]</p>
 <p>L: In a very unusual way. You’ll see it tonight at the concert. Our music I think is very heroic, powerful, firm, creative, and brave.</p>
 <p>[Question not heard]</p>
@@ -90,6 +85,20 @@
 <p>L: These are people who are not just tired of the system, they’ve been driven mad by it. They are principally opposed to participation within any system, be it communist or fascist. By communist I mean in the form in which it existed until 1985, Brezhnevite [communism], which differed little from western capitalism in the economic and political sense. Limonov called this, very accurately, a disciplinary-sanitary regime. These are people who are potential mutineers who choose revolt in any form.</p>
 <p>I: Do you think [cut off]</p>
 <p>L: - Russian Revolution, not ideologically. At the very least it does not happen on the level of ideology. They happen emotionally. The animating force behind revolutions are emotions, not ideology. Ideologies come to replace them. Revolt comes first. A revolt directed against all ideologies in the end.</p>
+<section class="footnotes" role="doc-endnotes">
+<hr>
+<ol>
+<li id="fn:1" role="doc-endnote">
+<p>Concept from the thought of Lev Gumilev, a controversial Russian historian and ethnographer. According to him, the growth of ethnic groups is linked to passionarity, the ability for a group to give itself a cause beyond the personal interest. Passionarity comes in cycles and could wear down over time if it is not renewed by charismatic individuals with a spirit of self-sacrifice. Compare to Ibn Khaldun’s cycle of civilizations and the concept of asabiyya.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+</li>
+<li id="fn:2" role="doc-endnote">
+<p>Barkashov is a neo-Nazi who founded the Russian National Unity party. Very likely an informant.&#160;<a href="#fnref:2" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+</li>
+<li id="fn:3" role="doc-endnote">
+<p>Viktor Anpilov was the former head of the Trudovaya Rossiya, which refused to join the KPRF as they saw them as reformists. Played an active role in the 1993 Constitutional Crisis. Passed away in 2018.&#160;<a href="#fnref:3" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+</li>
+</ol>
+</section>
 
 
 
