update Letov interview

--- a/letov/index.html
+++ b/letov/index.html
@@ -132,7 +132,7 @@ But on my army cap, there is a hammer and a sickle and a star
   
     <p>
       Letov: It’s punk rock, Russian punk rock. I wouldn’t even focus on the style, there are many different styles. We have a few projects, Kommunizm, Grazhdanskaya Oborona, and my own personal project. On the whole, it’s garage rock, garage punk.
-Interviewer: Punk rock means you’re against something, right? That’s how it was in the West 10 years ago. Can you compare Western music with your own?
+Interviewer: Punk rock means you’re against something, right? That’s how it was in the West 10 years ago. Can you compare Western music to your own?
     </p>
  
 </div>
