added new song lyrics

--- a/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/index.html
+++ b/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/index.html
@@ -92,9 +92,15 @@
 <!-- raw HTML omitted -->
 <ul>
 <li><a href="/letov/harakiri/">Lyrics for Harakiri</a></li>
+<li><a href="/letov/a-song-about-lenin">Lyrics for A Song About Lenin</a></li>
+<li><a href="/letov/about-a-fool">Lyrics for About A Fool</a></li>
 <li><a href="/letov/government/">Lyrics for Government</a></li>
+<li><a href="/letov/as-it-should-be">Lyrics for Everything&rsquo;s As It Should Be</a></li>
+<li><a href="/letov/adolf-gitler/">Lyrics for Mein Kampf</a></li>
 <li><a href="/letov/everythings-going-according-to-plan/">Lyrics for Everything&rsquo;s Going According to Plan</a></li>
+<li><a href="/letov/my-defense/">Lyrics for My Defense</a></li>
 <li><a href="/letov/motherland/">Lyrics for Motherland</a></li>
+<li><a href="/letov/i-will-always-be-against/">Lyrics for I Will Always Be Against</a></li>
 </ul>
 
 
