--- a/letov/index.html
+++ b/letov/index.html
@@ -26,6 +26,42 @@
 
 <div>
   <h3>
+    <a href="/letov/overabundance-of-wit/">Lyrics for Overabundance of Wit (1989)</a>
+  </h3>
+  
+    <p>
+      For an overabundance of wit, there&rsquo;s only beggars' bowls and prison
+For a boistrous brain, there are only ditches and dikes For a beautiful brain, there are only scabs and lice For universal love there are only bloodied faces
+A bedsheet blows in the wind, walking through morning dew From fruitless ideas to ethereal guests From closed doors to buried animals From covered tables to heads busted open
+    </p>
+ 
+</div>
+
+
+<div>
+  <h3>
+    <a href="/letov/my-defense/">Lyrics for My Defense (1989)</a>
+  </h3>
+  
+    <p>
+      The plastic world has won
+The model turned out to be stronger
+The last ship has gone cold
+The last flashlight is tired
+And clumps of memory are stuck in my throat
+Oh - my defense
+A glimmer of light in an unseeing world
+Oh - my defense
+A mournful little ball of an absurd world
+A mournful little ball of a cheap world
+The plastic world has won
+    </p>
+ 
+</div>
+
+
+<div>
+  <h3>
     <a href="/letov/motherland/">Lyrics for Motherland (1993)</a>
   </h3>
   
@@ -39,6 +75,30 @@ Our wrathful power is moving apart the walls
 The sun calls us to follow it on campaign
 Against deadly cold, against pitch-black night
 I see my motherland rising up from its knees
+    </p>
+ 
+</div>
+
+
+<div>
+  <h3>
+    <a href="/letov/adolf-gitler/">Lyrics for Mein Kampf (1986)</a>
+  </h3>
+  
+    <p>
+      Corporal Schiklgruber1 wasn&rsquo;t in prison for naught
+Corporal Schiklgruber wasn&rsquo;t in prison for naught
+That&rsquo;s where he wrote Mein Kampf
+That&rsquo;s where he wrote Mein Kampf
+A textbook for sadists and exceptional bastards
+A textbook for the strong, a textbook for Achilles
+That&rsquo;s where he wrote Mein Kampf
+Mein Kampf, Mein Kampf
+Read Mein Kampf
+Read Mein Kampf
+Mein Kampf, Mein Kampf
+Read Mein Kampf
+Corporal Schiklgruber was a maniac and masochist
     </p>
  
 </div>
@@ -120,6 +180,73 @@ And the mud has turned into black ice, and everything is going according to plan
 And my destiny wants some rest.
 I promised it not to join the game of war
 But on my army cap, there is a hammer and a sickle and a star
+    </p>
+ 
+</div>
+
+
+<div>
+  <h3>
+    <a href="/letov/as-it-should-be/">Lyrics for Everything&#39;s As It Should Be (1989)</a>
+  </h3>
+  
+    <p>
+      Here&rsquo;s everything that has been
+It didn&rsquo;t exist nor does it now
+All of the layers are soaked
+All of the words have burned
+Everything&rsquo;s as it should be1
+In worn out boots
+Years and cigarette buds
+In worn out pockets
+Passports and fingers
+Everything&rsquo;s as it should be
+Sprightly wheels
+Durable buildings
+New decrees
+Brotherly graves
+Everything&rsquo;s as it should be
+Here&rsquo;s everything that has been
+    </p>
+ 
+</div>
+
+
+<div>
+  <h3>
+    <a href="/letov/about-a-fool/">Lyrics for About A Fool (1990)</a>
+  </h3>
+  
+    <p>
+      A fool wanders through the forest
+Looking for a fool even greater than him
+Death walks down the street, carrying blini1
+on a plate Whoever takes one will have his fate
+She&rsquo;ll touch him on the shoulder and kiss him passionately
+And pennies will fly out of his ass
+A fool wanders through the forest
+Looking for a fool even greater than him
+The gears are turning in my head
+    </p>
+ 
+</div>
+
+
+<div>
+  <h3>
+    <a href="/letov/a-song-about-lenin/">Lyrics for A Song About Lenin (1988)</a>
+  </h3>
+  
+    <p>
+      Lenin is Hitler, Lenin is Stalin
+Lenin is Kim Il Sung, Lenin is Mao
+Lenin is Buddha, Christ, and Cain and Abel
+Lenin is the Yin and the Yang, Lenin is the Dao
+Lenin lived, Lenin lives, Lenin will live
+Lenin will, will, will
+Lenin, Lenin he will live!
+Lenin is the jokes with which they hound us
+Lenin is the pastries with which they entice us
     </p>
  
 </div>
