--- a/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/index.html
+++ b/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/index.html
@@ -57,10 +57,10 @@
 <h3 id="songs-featured-in-this-episode">Songs featured in this episode</h3>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=XaF0GB58G_A">Grazhdanskaya Oborona – Harakiri</a></li>
-<li><a href="https://www.youtube.com/watch?v=c8RWxHnvxWI">Grazhdanskaya Oborona – Song About Lenin</a></li>
+<li><a href="https://www.youtube.com/watch?v=c8RWxHnvxWI">Grazhdanskaya Oborona – A Song About Lenin</a></li>
 <li><a href="https://www.youtube.com/watch?v=z-dFAvux5Vg">Grazhdanskaya Oborona – About a Fool</a></li>
 <li><a href="https://www.youtube.com/watch?v=IXdUmBJQAKM">Grazhdanskaya Oborona – Government</a></li>
-<li><a href="https://www.youtube.com/watch?v=c0bZVAJvEtk">Grazhdanskaya Oborona – Everything is As It Should Be (Everything is like what people have)</a></li>
+<li><a href="https://www.youtube.com/watch?v=c0bZVAJvEtk">Grazhdanskaya Oborona – Everything&rsquo;s As It Should Be</a></li>
 <li><a href="https://www.youtube.com/watch?v=H_BoeI2-E4w">Adolf Gitler – Mein Kampf</a></li>
 <li><a href="https://www.youtube.com/watch?v=ZB6VobpbxDE">Yanka – Overabundance of Wit</a></li>
 <li><a href="https://www.youtube.com/watch?v=XMtctSjB0Mo">Kommunizm – I See Nothing</a></li>
