--- a/letov/i-will-always-be-against/index.html
+++ b/letov/i-will-always-be-against/index.html
@@ -31,7 +31,7 @@
 
 <hr>
 <p>Falling into ditches, smelling the stench of corpses<br>
-Solving the problems of global humanism<br>
+Solving the problems of global communism<br>
 In circle after circle of darkness, communists march forward!<br>
 The source of objections packaged by the Sovdep<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>!</p>
 <p>I will always be against this!</p>
