--- a/letov/index.html
+++ b/letov/index.html
@@ -111,7 +111,7 @@ Corporal Schiklgruber was a maniac and masochist
   
     <p>
       Falling into ditches, smelling the stench of corpses
-Solving the problems of global humanism
+Solving the problems of global communism
 In circle after circle of darkness, communists march forward!
 The source of objections packaged by the Sovdep1!
 I will always be against this!
