adding links to the episode page

--- a/letov/about-a-fool/index.html
+++ b/letov/about-a-fool/index.html
@@ -66,6 +66,8 @@ You&rsquo;d never dream that up</p>
 Looking for a fool even greater than him</p>
 <p>A fool wanders through the world<br>
 Looking for a fool even greater than him</p>
+<hr>
+<p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
 <section class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
