--- a/letov/as-it-should-be/index.html
+++ b/letov/as-it-should-be/index.html
@@ -50,6 +50,8 @@ It didn&rsquo;t exist nor does it now<br>
 Correct and clear<br>
 Awesome and forever</p>
 <p>Everything&rsquo;s as it should be</p>
+<hr>
+<p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
 <section class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
