--- a/letov/everythings-going-according-to-plan/index.html
+++ b/letov/everythings-going-according-to-plan/index.html
@@ -58,6 +58,8 @@ It will come soon, we just gotta wait<br>
 Everything will be free there, it’ll be like we’re high<br>
 We probably won’t even have to die.<br>
 I woke up in the middle of the night and understood that everything is going according to the plan.</p>
+<hr>
+<p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
 <section class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
