--- a/letov/government/index.html
+++ b/letov/government/index.html
@@ -58,6 +58,8 @@ The one who willingly descended into the basement<br>
 Doomed to failure from the start</p>
 <p>KILL THE GOVERNMENT WITHIN YOU!</p>
 <p>Kill!</p>
+<hr>
+<p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
 <section class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
