--- a/letov/harakiri/index.html
+++ b/letov/harakiri/index.html
@@ -50,6 +50,8 @@ And there’s nothing left for us to do here&hellip;</p>
 He did harakiri right on our porch <br>
 He was drained of hope and all that he could<br>
 But you’ve all stayed as you were!</p>
+<hr>
+<p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
 <section class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
