--- a/letov/letov-interview-1/index.html
+++ b/letov/letov-interview-1/index.html
@@ -160,6 +160,8 @@
 <p>L: I’ll say something else. There is truth, and then there’s <em>truth</em>. There is one truth for everybody. Life isn’t worth a cent, it’s very easy to die, truth be told. Death does not solve anything. Death is the solution when you do it in the name of a certain idea. But life is worth nothing. And death is worth nothing. There is no death. You’ll die, but if you do not solve the problems that were put in front of you in life, then you’ll have to return and solve them again. Be it on the other side or here. I can say this because I have had a certain metaphysical experience. I was clinically dead. So you gotta do this with strength. It must be done in a serious, well-thought out manner, and with strength. If this is what you’ve decided to do. If you are not certain… Like in war. In war it’s also suicide when a person goes as a soldier and dies for an idea. One must fight, not rot.</p>
 <p>I: People also die from rotting. Say something to our guys, the ones who came to your concert. They thanked me. Why don’t you thank them?</p>
 <p>L: Thank you, I’m very grateful. I’m very happy that this happened. I’m very surprised that there are so many people in Norilsk who are truly alive. This has been one of the best concerts… The two concerts we’ve had here, they were the best we’ve ever had. I am insanely happy. Thank you so much.</p>
+<hr>
+<p>We discussed this interview on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
 <section class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
