--- a/letov/letov-interview-2/index.html
+++ b/letov/letov-interview-2/index.html
@@ -86,6 +86,8 @@
 <p>L: These are people who are not just tired of the system, they’ve been driven mad by it. They are principally opposed to participation within any system, be it communist or fascist. By communist I mean in the form in which it existed until 1985, Brezhnevite [communism], which differed little from western capitalism in the economic and political sense. Limonov called this, very accurately, a disciplinary-sanitary regime. These are people who are potential mutineers who choose revolt in any form.</p>
 <p>I: Do you think [cut off]</p>
 <p>L: - Russian Revolution, not ideologically. At the very least it does not happen on the level of ideology. They happen emotionally. The animating force behind revolutions are emotions, not ideology. Ideologies come to replace them. Revolt comes first. A revolt directed against all ideologies in the end.</p>
+<hr>
+<p>We discussed this interview on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
 <section class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
