--- a/letov/my-defense/index.html
+++ b/letov/my-defense/index.html
@@ -58,6 +58,8 @@ A mournful little ball of an unseeing world<br>
 Oh - my defense<br>
 A glimmer of light of a glass world</p>
 <p>Oh - my defense</p>
+<hr>
+<p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
 
 
 
