--- a/letov/a-song-about-lenin/index.html
+++ b/letov/a-song-about-lenin/index.html
@@ -65,6 +65,8 @@ He is always, always alive!</p>
 <p>Lenin lived, Lenin lives, Lenin will live<br>
 Lenin will, will, will<br>
 Lenin, Lenin he will live!</p>
+<hr>
+<p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
 
 
 
