--- a/letov/adolf-gitler/index.html
+++ b/letov/adolf-gitler/index.html
@@ -55,6 +55,8 @@ Mein Kampf, Mein Kampf<br>
 Read Mein Kampf</p>
 <p>Mein Kampf!<br>
 Read Mein Kampf!</p>
+<hr>
+<p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
 <section class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
