--- a/letov/i-will-always-be-against/index.html
+++ b/letov/i-will-always-be-against/index.html
@@ -45,6 +45,8 @@ The honorable descendents of harmonious fathers<br>
 The eyes pierce through circle after circle of darkness<br>
 Fullheartedly expressing a forced ecstasy</p>
 <p>I will always be against this!</p>
+<hr>
+<p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
 <section class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
