--- a/letov/motherland/index.html
+++ b/letov/motherland/index.html
@@ -61,6 +61,8 @@ I hear my Soviet motherland singing</p>
 <p>Motherland<br>
 Motherland<br>
 Motherland</p>
+<hr>
+<p>This song was featured on the episode <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a></p>
 
 
 
