--- a/episodes/index.html
+++ b/episodes/index.html
@@ -9,7 +9,7 @@
     
     
     <title>Gladio Free Europe | Episodes</title>
-  <link rel = 'stylesheet' href = 'https://gladiofreeeurope.github.io/css/styles.e8d8e8b764c972618d495f32ad39ac31e44f3c16c6b7c87f09f58df35538e8f9305ca4abb23a17d78b0d072565acedc6c02c36e0f184600114b1ad4ee9d1c147.css'>
+  <link rel = 'stylesheet' href = 'https://gladiofreeeurope.github.io/css/styles.fe344e072ccd464c396ca88de2b38257bc00a2fd4a58a4ce5555e3078c3b72ed08226bd6336218c50eab591f6d3f1bddd0823baa9f3e276335d789d0fbc6c7a9.css'>
 </head>
 <body>
     	<div class="container content"><header class="masthead">
@@ -38,6 +38,7 @@
     </a>
   </div>
   <div class="description">
+    <div class="date">May 19, 2021</div>
     <h3>
       <a href="/episodes/2021-05-19-the-wind-that-shakes-the-barley-ft-james/">The Wind That Shakes the Barley ft. James</a>
     </h3>
@@ -64,6 +65,7 @@
     </a>
   </div>
   <div class="description">
+    <div class="date">May 12, 2021</div>
     <h3>
       <a href="/episodes/2021-05-12-yegor-letov-and-the-national-bolsheviks/">Yegor Letov and the National Bolsheviks</a>
     </h3>
@@ -90,6 +92,7 @@
     </a>
   </div>
   <div class="description">
+    <div class="date">Apr 7, 2021</div>
     <h3>
       <a href="/episodes/2021-04-07-channels-of-rage/">Channels of Rage</a>
     </h3>
@@ -116,6 +119,7 @@
     </a>
   </div>
   <div class="description">
+    <div class="date">Mar 17, 2021</div>
     <h3>
       <a href="/episodes/2021-03-17-wasp-network-ft-jaime/">Wasp Network ft. Jaime</a>
     </h3>
@@ -142,6 +146,7 @@
     </a>
   </div>
   <div class="description">
+    <div class="date">Mar 7, 2021</div>
     <h3>
       <a href="/episodes/2021-03-07-hakka-ft-cnut/">Getting redpilled on the Hakka Question ft. Cnut the Great</a>
     </h3>
@@ -153,6 +158,7 @@
   </div>
 </div>
 
+<hr>
 </div> 
 
 <footer>
