--- a/letov/harakiri/index.html
+++ b/letov/harakiri/index.html
@@ -1,14 +1,60 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html lang="en-us" xmlns="http://www.w3.org/1999/xhtml"><head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
-    <meta name="google-site-verification" content="J3pj4z86dEKJNR2MFc3F_HvZg737o34nnm9J0tdq8nM" />
-    
-    
-    <title>Gladio Free Europe | Lyrics for Harakiri (1988)</title>
-  <link rel = 'stylesheet' href = 'https://gladiofreeeurope.github.io/css/styles.b67478b7c58526f64c9ad4760ab80ccb62ab37818f61a71f21ad97c77d505debaa7d57623cd9900c82ed9a4bcf870ab4a37629fe7a1dc6543b3855d651e6f26c.css'>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+  <meta
+    name="google-site-verification"
+    content="J3pj4z86dEKJNR2MFc3F_HvZg737o34nnm9J0tdq8nM"
+  />
+   
+  <title>Gladio Free Europe | Lyrics for Harakiri (1988)</title>
+  <link rel="stylesheet" href="https://gladiofreeeurope.github.io/css/styles.b67478b7c58526f64c9ad4760ab80ccb62ab37818f61a71f21ad97c77d505debaa7d57623cd9900c82ed9a4bcf870ab4a37629fe7a1dc6543b3855d651e6f26c.css" />
+
+  <title>Gladio Free Europe • A sort of movie, sort of history postcast</title>
+  <meta name="description" content="a sort of movie, sort of history podcast" />
+  <meta name="keywords" content="podcast, history, movies" />
+  <link rel="canonical" href="https://gladiofreeeurope.github.io/" />
+
+  <meta property="og:site_name" content="Gladio Free Europe" />
+  <meta property="og:title" content="Gladio Free Europe" />
+  <meta
+    property="og:image"
+    content="https://gladiofreeeurope.github.io/images/albumart.jpg"
+  />
+  <meta
+    property="og:image:secure_url"
+    content="https://gladiofreeeurope.github.io/imag"
+  />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta
+    property="og:description"
+    content="a sort of movie, sort of history podcast"
+  />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:url" content="https://gladiofreeeurope.github.io/" />
+
+  <meta name="twitter:site" content="@gladiofreeeuro" />
+  <meta name="twitter:title" content="Gladio Free Europe" />
+  <meta
+    name="twitter:description"
+    content="a sort of movie, sort of history podcast"
+  />
+  <meta
+    name="twitter:image"
+    content="https://gladiofreeeurope.github.io/imag"
+  />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <link
+    type="application/rss+xml"
+    rel="alternate"
+    title="Gladio Free Europe"
+    href="https://anchor.fm/s/4d855a8c/podcast/rss"
+  />
 </head>
 <body>
     	<div class="container content"><header class="masthead">
