--- a/episodes/index.html
+++ b/episodes/index.html
@@ -80,7 +80,7 @@
     <div class="description">
       <div class="date">Nov 17, 2021</div>
       <h3>
-        <a href="/episodes/2021-11-17-keivan-rus/">Keivn Rus</a>
+        <a href="/episodes/2021-11-17-keivan-rus/">Kievan Rus&#39;</a>
       </h3>
       
       <p>We venture into the eastern fringes of Europe to look at the origins of Russia, Ukraine, and Belarus: the Kievan Rus'</p>
