--- a/episodes/2021-12-01-shadows-of-forgotten-ancestors/index.html
+++ b/episodes/2021-12-01-shadows-of-forgotten-ancestors/index.html
@@ -94,7 +94,7 @@
 <p>Hosted by <a href="https://twitter.com/LegoRacers2">Liam</a>, <a href="https://twitter.com/abnormcore">Abram</a> and <a href="https://twitter.com/ItsBCJim">Jim</a>.</p>
 <p>Further listening:</p>
 <ul>
-<li><a href="https://gladiofreeeurope.github.io/episodes/2021-11-17-keivan-rus/">E24 Kievan Rus'</a></li>
+<li><a href="https://gladiofreeeurope.github.io/episodes/2021-11-17-keivan-rus/">E24 Kievan Rus&rsquo;</a></li>
 <li><a href="https://gladiofreeeurope.github.io/episodes/2021-09-29-soy-cuba/">E18 Soy Cuba ft. Jaime</a></li>
 </ul>
 <div class="embed-spotify">
