--- a/letov/index.html
+++ b/letov/index.html
@@ -75,7 +75,7 @@
   </h3>
   
     <p>
-      For an overabundance of wit, there&rsquo;s only beggars' bowls and prison
+      For an overabundance of wit, there&rsquo;s only beggars&rsquo; bowls and prison
 For a boistrous brain, there are only ditches and dikes For a beautiful brain, there are only scabs and lice For universal love there are only bloodied faces
 A bedsheet blows in the wind, walking through morning dew From fruitless ideas to ethereal guests From closed doors to buried animals From covered tables to heads busted open
     </p>
